@@ -7,9 +7,10 @@ If a valid partition number is specified that partition will be used when sendin
 If no partition is specified but a key is present a partition will be chosen using a hash of the key. If neither key nor partition is present a partition will be assigned in a round-robin fashion.
 
 The record also has an associated timestamp. If the user did not provide a timestamp, the producer will stamp the record with its current time. The timestamp eventually used by Kafka depends on the timestamp type configured for the topic.
-
-
  */
+package producer;
+import commons.header.Header;
+
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.*;
@@ -17,30 +18,30 @@ import java.util.*;
 public class ProducerRecord<K, V> {
     private String topic;
     private Long timestamp;
+    private V value;
     private Optional<Integer> partitionNumber = Optional.empty();
     private Optional<K> key = Optional.empty();
-    private Optional<V> value = Optional.empty();
-     private Iterable<Header> headers;
+    private Iterable<Header> headers;
 
     public ProducerRecord(String topic, Integer partition, Long timestamp, K key, V value) {
         this.topic = topic;
         this.timestamp = timestamp;
+        this.value = value;
         this.partitionNumber = Optional.ofNullable(partition);
         this.key = Optional.ofNullable(key);
-        this.value = Optional.ofNullable(value);
     }
 
     public ProducerRecord(String topic, Integer partition, Long timestamp, K key, V value, Iterable<Header> headers) {
         this.topic = topic;
         this.timestamp = timestamp;
+        this.value = value;
         this.partitionNumber = Optional.ofNullable(partition);
         this.key = Optional.ofNullable(key);
-        this.value = Optional.ofNullable(value);
 
         if (headers != null) {
             List<Header> headerList = new ArrayList<>();
             headers.forEach(headerList::add);
-            this.headers = Collections.unmodifiableList(headerList);
+            this.headers = List.copyOf(headerList);
         } else {
             this.headers = Collections.emptyList();
         }
@@ -49,28 +50,28 @@ public class ProducerRecord<K, V> {
 
     public ProducerRecord(String topic, Integer partition, K key, V value) {
         this.topic = topic;
+        this.value = value;
         this.timestamp = LocalDateTime.now()
                 .atZone(ZoneId.systemDefault())
                 .toInstant()
                 .toEpochMilli();
         this.partitionNumber = Optional.ofNullable(partition);
         this.key = Optional.ofNullable(key);
-        this.value = Optional.ofNullable(value);
     }
 
     public ProducerRecord(String topic, Integer partition, K key, V value, Iterable<Header> headers) {
         this.topic = topic;
+        this.value = value;
         this.timestamp = LocalDateTime.now()
                 .atZone(ZoneId.systemDefault())
                 .toInstant()
                 .toEpochMilli();
         this.partitionNumber = Optional.ofNullable(partition);
         this.key = Optional.ofNullable(key);
-        this.value = Optional.ofNullable(value);
         if (headers != null) {
             List<Header> headerList = new ArrayList<>();
             headers.forEach(headerList::add);
-            this.headers = Collections.unmodifiableList(headerList);
+           this.headers = List.copyOf(headerList);
         } else {
             this.headers = Collections.emptyList();
         }
@@ -78,21 +79,21 @@ public class ProducerRecord<K, V> {
 
     public ProducerRecord(String topic, K key, V value) {
         this.topic = topic;
+        this.value = value;
         this.timestamp = LocalDateTime.now()
                 .atZone(ZoneId.systemDefault())
                 .toInstant()
                 .toEpochMilli();
         this.key = Optional.ofNullable(key);
-        this.value = Optional.ofNullable(value);
     }
 
     public ProducerRecord(String topic, V value) {
         this.topic = topic;
+        this.value = value;
         this.timestamp = LocalDateTime.now()
                 .atZone(ZoneId.systemDefault())
                 .toInstant()
                 .toEpochMilli();
-        this.value = Optional.ofNullable(value);
     }
 
     // METHODS
@@ -116,7 +117,7 @@ public class ProducerRecord<K, V> {
 
 
     public V getValue() {
-        return value.orElse(null);
+        return value;
     }
 
     @Override
